--- a/FiveBelow-4.0.1.ipa.plist
+++ b/FiveBelow-4.0.1.ipa.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://172.20.8.17:8081/repository/download/FiveBelow/HH/Release/</string>
+					<string>http://172.20.8.17:8081/repository/download/FiveBelow/HH/Release/FiveBelow-4.0.1.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
